# agent-canary-tokens

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIRE_LINE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: deployment.md  detection.md  strategies.md  web-tool.md
examples/: agent_memory_canary.py  basic_canary.py  webhook_alerting.py
scripts/: fire-line-audit.sh
src/agent_canary/: __init__.py  aho_corasick.py  alerter.py  detector.py  generator.py  honeypot.py  pii_integration.py  pipeline_locator.py  semantic.py  store.py  types.py
src/agent_canary/strategies/: __init__.py  base.py  custom.py  fake_contact.py  fake_credential.py  fake_document.py  fake_url.py
tests/: conftest.py  test_canary_tokens.py
web-tool/: index.html  worker.ts  wrangler.toml
